# pipCreator

./: .gitignore  LICENSE  PLUGINS.md  README.md  plugin.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
Test/: test.py
guide/: CONVERT.md  CREATE.md  PACKAGE.md  UPLOAD.md  VENV.md
pipCreator/: __init__.py  color.py  constants.py  convert.py  createtest.py  flask_constants.py  flaskapp.py  git.py  guide.py  install.py  main.py  package.py  plugin.py  upload.py  writer.py
