[metadata]
name = pipCreator
version = 0.1.0
author = Rakesh Kanna
author_email = rakeshkanna0108@gmail.com
description = This creates all the necessary files for creating a python package.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/rakeshkanna-rk/pipCreator/
    PyPI = https://pypi.org/project/pipCreator/
keywords = pip, package, python, setup, create, creator
license = MIT
url = https://github.com/rakeshkanna-rk/pipCreator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click
    colorama
    twine
    setuptools
    wheel


[options.entry_points]
console_scripts =
    pipcreator = pipcreator:cli
